# job-tracker

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/ADR/: 001-tech-stack.md
tests/: test_placeholder.py
