[project]
name = "job-tracker"
version = "0.1.0"
description = "A self-hosted application that tracks job listings across company career pages using LLM-powered selector extraction"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups] # Keep separate, as these are only needed in dev
dev = [
    "ruff>=0.14.1",
    "mypy>=1.18",
    "pre-commit",
    "pytest",
]

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["job_tracker"]

[tool.mypy]
python_version = "3.14"
strict = true
mypy_path = "src"
packages = ["job_tracker"]
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
